# argus

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: daily-update.yml  stale.yml
reports/2026/argus/: 2026-01-07.md
reports/2026/dynamo/: 2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-13.md  2026-01-14.md  2026-01-15.md  2026-01-16.md  2026-01-17.md  2026-01-18.md  2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  (+159 more)
reports/2026/sglang/: 2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-13.md  2026-01-14.md  2026-01-15.md  2026-01-16.md  2026-01-17.md  2026-01-18.md  2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  (+165 more)
src/: config.py  github_utils.py  importance_scorer.py  llm.py  monitor.py
test_venv/: pyvenv.cfg
(+199 files in other folders)
